--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,20 @@
 [package]
-name = "tinyfiledialogs"
-description = "High-level Rust binding for the tinyfiledialogs C library."
-version = "2.5.9"
-authors = ["Guillaume Vareille <vareille@users.sourceforge.net>", "Josh Matthews <josh@joshmatthews.net>"]
-license = "zlib-acknowledgement"
-readme = "README.md"
-keywords = ["dialog", "ui", "windows", "unix"]
-repository = "https://github.com/jdm/tinyfiledialogs-rs"
-
+authors = ["Guillaume Vareille <vareille@users.sourceforge.net>", "Josh Matthews <josh@joshmatthews.net>", "Aaron Trent <novacrazy@gmail.com>"]
 build = "build.rs"
-
-[lib]
+categories = ["api-bindings", "gui"]
+description = "High-level Rust binding for the tinyfiledialogs C library."
+keywords = ["dialog", "ui", "windows", "unix"]
+license = "zlib-acknowledgement"
 name = "tinyfiledialogs"
-
-[dependencies]
-libc = "0.2.0"
+readme = "README.md"
+repository = "https://github.com/jdm/tinyfiledialogs-rs"
+version = "3.0.0"
 
 [build-dependencies]
 gcc = "0.3"
+
+[dependencies]
+libc = "0.2"
+
+[lib]
+name = "tinyfiledialogs"
